syntax = "proto3";

option go_package = "github.com/coffeenights/conure/api/protos/apps";

message Cluster {
  string id = 1;
  string name = 2;
}

message Application {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Cluster clusters = 4;
  string created = 5;
  string modified = 6;
  uint64 account_id = 7;
  bool active = 8;
}

message GetApplicationRequest {
  string id = 1;
}

message GetApplicationResponse {
  Application application = 1;
}

message ListApplicationsRequest {
  uint64 account_id = 1;
  optional string environment_id = 2;
}

message ListApplicationsResponse {
  repeated Application applications = 1;
}


service ApplicationService {
  rpc GetApplication (GetApplicationRequest) returns (GetApplicationResponse) {}
  rpc ListApplications (ListApplicationsRequest) returns (ListApplicationsResponse) {}
}
